# TamilEditor

./: CMakeLists.txt  CustomSuggestionWords.h  README.md  TamilPhonemeMap.h  englishtotamilconverter.cpp  englishtotamilconverter.h  mainwindow.cpp  mainwindow.h  suggestionengine.cpp  suggestionengine.h
phonetic/: help.md
